# chessframe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: capture.rs  random.rs  simple.rs
src/: bitboard.rs  board.rs  build.rs  castling_rights.rs  chess_move.rs  color.rs  error.rs  file.rs  game.rs  lib.rs  magic.rs  move.rs  piece.rs  rank.rs  square.rs  transpositiontable.rs  uci.rs
src/gen_tables/: between.rs  files.rs  helpers.rs  king.rs  knight.rs  magic.rs  mod.rs  pawn.rs  pext.rs  ranks.rs  rays.rs  tangent.rs  zobrist.rs
tests/: board.rs  chess_move.rs  move.rs  move_generation.rs  perft.rs
