[package]
name = "chess-frame"
version = "0.0.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
thiserror = "2.0.2"
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
rand_chacha = "0.3.1"

[build-dependencies]
rand_chacha = "0.3.1"
thiserror = "2.0.2"

[features]
rand-chacha = ["rand_chacha"]

[[bin]]
name = "magic_gen"
path = "src/bin/magic_gen.rs"
required-features = ["rand-chacha"]
