[package]
name = "chessframe"
version = "0.3.0"
edition = "2021"
description = "A Rust library for working with chess positions, generating psudo-legal moves, and interacting with the UCI protocol."
readme = "README.md"
repository = "https://github.com/Zirconium419122/chessframe"
license = "Apache-2.0"
keywords = ["chess", "bitboards", "uci", "move-generation"]
build = "src/build.rs"

[dependencies]
thiserror = "2.0.11"
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
rand_chacha = "0.3.1"

[build-dependencies]
rand_chacha = "0.3.1"
thiserror = "2.0.11"

[features]
rand-chacha = ["rand_chacha"]

[[bin]]
name = "magic_gen"
path = "src/bin/magic_gen.rs"
required-features = ["rand-chacha"]
