[package]
name = "chessframe"
version = "0.4.2"
edition = "2024"
description = "A Rust library for working with chess positions, generating psudo-legal moves, and interacting with the UCI protocol."
readme = "README.md"
repository = "https://github.com/Zirconium419122/chessframe"
license = "Apache-2.0"
keywords = ["chess", "bitboards", "uci", "move-generation"]
build = "src/build.rs"

[dependencies]
thiserror = "2.0.18"
rand_chacha = { version = "0.9.0", optional = true }

[dev-dependencies]
rand_chacha = "0.9.0"

[build-dependencies]
rand_chacha = "0.9.0"
thiserror = "2.0.18"

[features]
rand-chacha = ["rand_chacha"]

[[bin]]
name = "magic_gen"
path = "src/bin/magic_gen.rs"
required-features = ["rand-chacha"]
